--- a/FMACSS-Framework/index.html
+++ b/FMACSS-Framework/index.html
@@ -42,7 +42,7 @@
 
             </div>
             <div class="dFlex align-center gap-2 ">
-                <button class="btn-header dFlex align-center p-0 font-size-20"><span
+                <button class="btn-header dFlex align-center p-0 font-size-20 cursor-p"><span
                         class="icon dFlex align-center just-center"><img src="assets/img/airplane.svg"
                             alt="airplane"></span><span class="text ">Book now</span></button>
             </div>
@@ -51,6 +51,7 @@
     </header>
 
     <main>
+        
         <section class="welcome">
             <div class="main-img p-relative ">
                 <figure class="mainBg "><img src="assets/img/hero-1-main-bg-1.png" alt="" class="img-xxl"></figure>
@@ -87,7 +88,7 @@
                         </select>
 
                     </form>
-                    <button class="btn text-uppercase p-relative bottom-shadow m-2">
+                    <button class="btn text-uppercase p-relative bottom-shadow m-2 cursor-p">
                         <span class="btn-text-one p-absolute img-xxl">Find Now</span>
                         <span class="btn-text-two p-absolute img-xxl">Find Now</span>
                     </button>
@@ -96,7 +97,7 @@
             </div>
         </section>
         <div class="p-4 bgline all-page-p ">
-            <section class="aboutUs dGrid align-center just-between">
+            <section class="aboutUs dGrid align-center just-center">
                 <article class="m-3  content ">
                     <p class="p-content ">about us:</p>
                     <h1 class="text-uppercase img-lg font-size-30">When passion and adventure collide, they ignite the
@@ -106,7 +107,7 @@
                         to
                         explore.
                     </h1>
-                    <button class="btn text-uppercase p-relative bottom-shadow m-top">
+                    <button class="btn text-uppercase p-relative bottom-shadow m-top remove-phone cursor-p">
                         <span class="btn-text-one p-absolute img-xxl">Learn More</span>
                         <span class="btn-text-two p-absolute img-xxl">Learn More</span>
                     </button>
@@ -145,16 +146,16 @@
                                     <h5>Serengeti National Park </h5>
                                 </div>
                             </div>
-                            <div class="dFlex card-footer align-center text-center">
-                                <div class=" dFlex card-date align-center">
+                            <div class="dFlex card-footer align-center text-center  just-between">
+                                <div class=" dFlex card-date align-center gap-1">
                                     <figure><img src="assets/img/date.svg" alt="date" class="img-xs"></figure>
                                     <p>6 days</p>
                                 </div>
-                                <div class="dFlex card-persons align-center">
+                                <div class="dFlex card-persons align-center gap-1">
                                     <figure><img src="assets/img/person.svg" alt="person" class="img-xs"></figure>
                                     <p>6 person</p>
                                 </div>
-                                <h4>$5000</h4>
+                                <h4 class="cursor-p">$5000</h4>
                             </div>
 
 
@@ -187,16 +188,16 @@
                                     <h5>Serengeti National Park </h5>
                                 </div>
                             </div>
-                            <div class="dFlex card-footer align-center text-center">
-                                <div class=" dFlex card-date align-center">
+                            <div class="dFlex card-footer align-center text-center  just-between">
+                                <div class=" dFlex card-date align-center gap-1">
                                     <figure><img src="assets/img/date.svg" alt="date" class="img-xs"></figure>
                                     <p>6 days</p>
                                 </div>
-                                <div class="dFlex card-persons align-center">
+                                <div class="dFlex card-persons align-center gap-1">
                                     <figure><img src="assets/img/person.svg" alt="person" class="img-xs"></figure>
                                     <p>6 person</p>
                                 </div>
-                                <h4>$5000</h4>
+                                <h4 class="cursor-p">$5000</h4>
                             </div>
 
 
@@ -229,16 +230,16 @@
                                     <h5>Serengeti National Park </h5>
                                 </div>
                             </div>
-                            <div class="dFlex card-footer align-center text-center">
-                                <div class=" dFlex card-date align-center">
+                            <div class="dFlex card-footer align-center text-center  just-between">
+                                <div class=" dFlex card-date align-center gap-1">
                                     <figure><img src="assets/img/date.svg" alt="date" class="img-xs"></figure>
                                     <p>6 days</p>
                                 </div>
-                                <div class="dFlex card-persons align-center">
+                                <div class="dFlex card-persons align-center gap-1">
                                     <figure><img src="assets/img/person.svg" alt="person" class="img-xs"></figure>
                                     <p>6 person</p>
                                 </div>
-                                <h4>$5000</h4>
+                                <h4 class="cursor-p">$5000</h4>
                             </div>
 
 
@@ -271,16 +272,16 @@
                                     <h5>Serengeti National Park </h5>
                                 </div>
                             </div>
-                            <div class="dFlex card-footer align-center text-center">
-                                <div class=" dFlex card-date align-center">
+                            <div class="dFlex card-footer align-center text-center just-between">
+                                <div class=" dFlex card-date align-center gap-1">
                                     <figure><img src="assets/img/date.svg" alt="date" class="img-xs"></figure>
                                     <p>6 days</p>
                                 </div>
-                                <div class="dFlex card-persons align-center">
+                                <div class="dFlex card-persons align-center gap-1 ">
                                     <figure><img src="assets/img/person.svg" alt="person" class="img-xs"></figure>
                                     <p>6 person</p>
                                 </div>
-                                <h4>$5000</h4>
+                                <h4 class="cursor-p">$5000</h4>
                             </div>
 
 
@@ -305,7 +306,7 @@
 
                 </section>
                 <div class="dFlex just-center align-center m-5 p-3">
-                    <button class="btn text-uppercase p-relative bottom-shadow ">
+                    <button class="btn text-uppercase p-relative bottom-shadow cursor-p ">
                         <span class="btn-text-one p-absolute img-xxl">Explore All</span>
                         <span class="btn-text-two p-absolute img-xxl">Explore All</span>
                     </button>
@@ -377,7 +378,7 @@
             <section class="discount">
                 <div class="discount-content m-0 dFlex align-center just-between gap-12">
 
-                    <figure class="m-4" ><img src="assets/img/main-object.png" alt="" ></figure>
+                    <figure class="m-4 discount-img" ><img src="assets/img/main-object.png" alt="" ></figure>
                     <div class="discount-info p-relative ">
                         <h1 class="text-uppercase">Interested?</h1>
                         <h3 class="text-uppercase">Discount if you book now</h3>
@@ -385,7 +386,7 @@
                             architecto
                             placeat suscipit earum? Ab sapiente omnis labore ducimus assumenda, porro itaque sed aut
                             repudiandae, quam cupiditate corporis animi!</p>
-                            <button class="btn text-uppercase p-relative bottom-shadow ">
+                            <button class="btn text-uppercase p-relative bottom-shadow cursor-p">
                                 <span class="btn-text-one p-absolute img-xxl">Get in touch</span>
                                 <span class="btn-text-two p-absolute img-xxl">Get in touch</span>
                             </button>
@@ -532,11 +533,11 @@
                         </div>
                     </div>
 
-                    <div class="m-1 dFlex just-end align-center">
-                        <h1 class="text-uppercase img-s">Want to hear from us?</h1>
+                    <div class="m-1 dFlex just-end align-center gap-1">
+                        <h1 class="text-uppercase img-s ">Want to hear from us?</h1>
                         <div class="input-container p-relative ">
                             <input required="" placeholder="Email" type="email">
-                            <button class="invite-btn p-absolute text-center text-uppercase" type="button">
+                            <button class="invite-btn p-absolute text-center text-uppercase cursor-p" type="button">
                                 Subsribe
                             </button>
 
@@ -547,7 +548,7 @@
 
                 </div>
             </section>
-            <section class="dFlex just-between align-center m-2">
+            <section class="footer-end dFlex just-between align-center m-2">
                 <div>
                     <p>2024 All right reserved</p>
                 </div>
@@ -590,7 +591,7 @@
 
             </section>
 
-
+        </div>
 
     </footer>
 
