--- a/FMACSS-Framework/index.html
+++ b/FMACSS-Framework/index.html
@@ -114,7 +114,7 @@
             </div>
         </section>
         <div class="p-4 bgline all-page-p mobile-margin-top ">
-            <section class="aboutUs dGrid align-center just-center">
+            <section class="aboutUs dGrid align-center just-center ">
                 <article class="m-3  content just-phone-center align-phone-center txt-phone-al-center ">
                     <p class="p-content ">about us:</p>
                     <h1 class="text-uppercase img-lg font-size-30">When passion and adventure collide, they ignite the
@@ -132,11 +132,11 @@
 
                 <article class="swiper mySwiper">
                     <div class="swiper-wrapper">
-                        <div class="swiper-slide"><img src="assets/img/img.unsplash.jpg" alt=""></div>
-                        <div class="swiper-slide"><img src="assets/img/img.unsplash2.jpg" alt=""></div>
-                        <div class="swiper-slide"><img src="assets/img/img2.jpg" alt=""></div>
-                        <div class="swiper-slide"><img src="assets/img/imgparis.jpg" alt=""></div>
-                        <div class="swiper-slide"><img src="assets/img/unsplash.jpg" alt=""></div>
+                        <div class="swiper-slide"><img src="assets/img/img.unsplash.jpg" alt="" class="img-xxl"></div>
+                        <div class="swiper-slide"><img src="assets/img/img.unsplash2.jpg" alt="" class="img-xxl"></div>
+                        <div class="swiper-slide"><img src="assets/img/img2.jpg" alt="" class="img-xxl"></div>
+                        <div class="swiper-slide"><img src="assets/img/imgparis.jpg" alt="" class="img-xxl"></div>
+                        <div class="swiper-slide"><img src="assets/img/unsplash.jpg" alt="" class="img-xxl"></div>
                     </div>
                 </article>
 
@@ -163,7 +163,7 @@
                                     <h5>Serengeti National Park </h5>
                                 </div>
                             </div>
-                            <div class="dFlex card-footer align-center text-center  just-between">
+                            <div class="dFlex card-footer align-center text-center  just-between p-0">
                                 <div class=" dFlex card-date align-center gap-1">
                                     <figure><img src="assets/img/date.svg" alt="date" class="img-xs"></figure>
                                     <p>6 days</p>
@@ -205,7 +205,7 @@
                                     <h5>Serengeti National Park </h5>
                                 </div>
                             </div>
-                            <div class="dFlex card-footer align-center text-center  just-between">
+                            <div class="dFlex card-footer align-center text-center  just-between p-0">
                                 <div class=" dFlex card-date align-center gap-1">
                                     <figure><img src="assets/img/date.svg" alt="date" class="img-xs"></figure>
                                     <p>6 days</p>
@@ -247,7 +247,7 @@
                                     <h5>Serengeti National Park </h5>
                                 </div>
                             </div>
-                            <div class="dFlex card-footer align-center text-center  just-between">
+                            <div class="dFlex card-footer align-center text-center  just-between p-0">
                                 <div class=" dFlex card-date align-center gap-1">
                                     <figure><img src="assets/img/date.svg" alt="date" class="img-xs"></figure>
                                     <p>6 days</p>
@@ -289,7 +289,7 @@
                                     <h5>Serengeti National Park </h5>
                                 </div>
                             </div>
-                            <div class="dFlex card-footer align-center text-center just-between">
+                            <div class="dFlex card-footer align-center text-center just-between p-0">
                                 <div class=" dFlex card-date align-center gap-1">
                                     <figure><img src="assets/img/date.svg" alt="date" class="img-xs"></figure>
                                     <p>6 days</p>
@@ -337,7 +337,7 @@
                         <h1 class="text-uppercase">Best Travel Places</h1>
                     </div>
                 </div>
-                <div class="aboutCitys dGrid ">
+                <div class="aboutCitys dGrid gap-5 ">
                     <article class="city-content dFlex align-center just-between g-8 just-phone-center txt-phone-al-center">
                         <div class="city-info">
                             <h1 class="text-uppercase">Amsterdam</h1>
