--- a/FMACSS-Framework/index.html
+++ b/FMACSS-Framework/index.html
@@ -16,7 +16,6 @@
 
 
 
-
 </head>
 
 <body>
@@ -76,7 +75,7 @@
                 <figure class="mask-layer  remove-phone"><img src="assets/img/mask-layer.png" alt=""
                         class="img-xxl p-absolute">
                 </figure>
-                <div class="optionsMenu align-center just-center row p-0 p-absolute img-tablet-100">
+                <div class="optionsMenu align-center just-center row p-0 p-absolute img-tablet-100 b-radius-15">
                     <form action="#">
                         <select name="select" id="contry" class="p-0 m-0">
                             <option selected="select" disabled="disabled" class="option">Where to?</option>
@@ -468,8 +467,8 @@
 
     </main>
 
-    <footer class="m-1 p-1">
-        <div class="footer-content p-1">
+    <footer class="m-1 p-1 b-radius-15">
+        <div class="footer-content p-1 b-radius-15">
             <section class="feauters p-2">
 
                 <div class="dGrid  align-center footer-info">
