--- a/FMACSS-Framework/index.html
+++ b/FMACSS-Framework/index.html
@@ -26,7 +26,7 @@
                 <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-s"></a>
             </div>
 
-            <div class="dFlex g-2 align-center ">
+            <div class="dFlex g-2 align-center cursor-p">
 
                 <div class="menu p-relative font-size-30">
                     <div class="text">
@@ -53,15 +53,15 @@
 
         <section class="welcome">
             <div class="mobileImg p-relative">
-                <figure class="banner-mobile">
-                    <img src="assets/img/banner-mobile-bg.png" alt="">
+                <figure class="banner-mobile img-phone-100">
+                    <img src="assets/img/banner-mobile-bg.png" alt="" class="img-phone-100">
                 </figure>
 
                 <h1 class="p-absolute text-uppercase ">Travel</h1>
                 <p class="p-absolute font-size-30 ">Explore wherever your heart leads you!</p>
 
-                <figure class="mobile-mask p-absolute">
-                    <img src="assets/img/mobilemask.png" alt="">
+                <figure class="mobile-mask p-absolute img-phone-100">
+                    <img src="assets/img/mobilemask.png" alt="" class="img-phone-100">
                 </figure>
 
             </div>
@@ -75,9 +75,9 @@
                 <figure class="mask-layer  remove-phone"><img src="assets/img/mask-layer.png" alt=""
                         class="img-xxl p-absolute">
                 </figure>
-                <div class="optionsMenu align-center just-center row p-0 p-absolute img-tablet-100 b-radius-15">
-                    <form action="#">
-                        <select name="select" id="contry" class="p-0 m-0">
+                <div class="optionsMenu align-center just-center row p-0 p-absolute img-tablet-100 b-radius-15 just-phone-center">
+                    <form action="#" class=" just-phone-center">
+                        <select name="select" id="contry" class="p-0 m-0 cursor-p">
                             <option selected="select" disabled="disabled" class="option">Where to?</option>
                             <option value="2" class="option">Kyoto, Japan</option>
                             <option value="3" class="option">Bali, Indonesia</option>
@@ -85,7 +85,7 @@
                             <option value="5" class="option">Hawaii, USA</option>
                             <option value="6" class="option">Rome, Italy</option>
                         </select>
-                        <select name="select" id="deparature" class="p-0 m-0">
+                        <select name="select" id="deparature" class="p-0 m-0 cursor-p">
                             <option selected="select" disabled="disabled">Select Departure</option>
                             <option value="2" class="option">Mumbai, India</option>
                             <option value="3" class="option">Toronto Canada</option>
@@ -94,7 +94,7 @@
                             <option value="6" class="option">Ciaro,Egypt</option>
                             <option value="7" class="option">Paris, France</option>
                         </select>
-                        <select name="select" id="type" class="p-0 m-0">
+                        <select name="select" id="type" class="p-0 m-0 cursor-p">
                             <option selected="select" disabled="disabled">Select Type</option>
                             <option value="2" class="option">Adventure </option>
                             <option value="3" class="option">Historical/Cultural</option>
@@ -336,7 +336,7 @@
                     <article class="city-content dFlex align-center just-between g-8 just-phone-center txt-phone-al-center">
                         <div class="city-info">
                             <h1 class="text-uppercase">Amsterdam</h1>
-                            <p>Amsterdam, a city of charming canals and eclectic architecture, epitomizes Dutch culture
+                            <p class="font-size-20"> Amsterdam, a city of charming canals and eclectic architecture, epitomizes Dutch culture
                                 with its bustling streets, iconic tulip markets, and world-class museums like the
                                 Rijksmuseum. Known for its liberal attitudes and vibrant nightlife, Amsterdam seamlessly
                                 blends old-world charm with modern sophistication, making it a must-visit destination
@@ -351,7 +351,7 @@
                         <figure class="city-img p-0 b-radius-15"><img src="assets/img/grece.jpg" alt="Amsterdam" class="b-radius-15"></figure>
                         <div class="city-info">
                             <h1 class="text-uppercase">Greece</h1>
-                            <p>Greece, steeped in ancient history and mythological allure, captivates visitors with its
+                            <p class="font-size-20">Greece, steeped in ancient history and mythological allure, captivates visitors with its
                                 stunning Mediterranean landscapes, azure coastlines, and iconic landmarks like the
                                 Acropolis in Athens and the whitewashed buildings of Santorini. Rich in culture,
                                 cuisine, and hospitality, Greece offers a timeless charm that beckons travelers to
@@ -363,7 +363,7 @@
                     <article class="city-content dFlex align-center just-between g-8 just-phone-center txt-phone-al-center">
                         <div class="city-info">
                             <h1 class="text-uppercase">Italy</h1>
-                            <p>Italy, a cradle of art, history, and romance, boasts architectural marvels like the
+                            <p class="font-size-20">Italy, a cradle of art, history, and romance, boasts architectural marvels like the
                                 Colosseum in Rome, the canals of Venice, and the Renaissance splendor of Florence. Its
                                 culinary delights, from pasta to gelato, tantalize the taste buds, while its picturesque
                                 landscapes and vibrant cities enchant visitors with timeless beauty and cultural
@@ -380,13 +380,13 @@
 
 
             <section class="discount b-radius-15">
-                <div class="discount-content m-0 dFlex align-center just-between gap-12 b-radius-15">
+                <div class="discount-content m-0 dFlex align-center just-between gap-12 b-radius-15 p-0">
 
                     <figure class="m-4 discount-img"><img src="assets/img/main-object.png" alt=""></figure>
                     <div class="discount-info p-relative ">
                         <h1 class="text-uppercase">Interested?</h1>
-                        <h3 class="text-uppercase">Discount if you book now</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, corporis! Amet
+                        <h3 class="text-uppercase font-size-20">Discount if you book now</h3>
+                        <p class="img-lg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, corporis! Amet
                             architecto
                             placeat suscipit earum? Ab sapiente omnis labore ducimus assumenda, porro itaque sed aut
                             repudiandae, quam cupiditate corporis animi!</p>
@@ -416,45 +416,45 @@
             <div class="scrollImg p-relative overflow-h">
                 <div class="scroller p-absolute overflow-h">
                     <div class="scroller-inner dFlex">
-                        <div class="zoom-img overflow-h">
+                        <div class="zoom-img overflow-h b-radius-15">
                             <figure>
-                                <img src="assets/img/scimg.png" alt="">
+                                <img src="assets/img/scimg.png" alt="" class="img-xxl">
                             </figure>
                         </div>
-                        <div class="zoom-img overflow-h">
-                            <figure> <img src="assets/img/scoll.png" alt=""></figure>
+                        <div class="zoom-img overflow-h b-radius-15 ">
+                            <figure> <img src="assets/img/scoll.png" alt="" class="img-xxl"></figure>
                         </div>
-                        <div class="zoom-img overflow-h">
-                            <figure> <img src="assets/img/scroollimg.png" alt=""></figure>
+                        <div class="zoom-img overflow-h b-radius-15">
+                            <figure> <img src="assets/img/scroollimg.png" alt="" class="img-xxl"></figure>
                         </div>
-                        <div class="zoom-img overflow-h">
-                            <figure><img src="assets/img/scroollimgg.png" alt=""></figure>
+                        <div class="zoom-img overflow-h b-radius-15">
+                            <figure><img src="assets/img/scroollimgg.png" alt="" class="img-xxl" ></figure>
                         </div>
-                        <div class="zoom-img overflow-h">
-                            <figure><img src="assets/img/imgss.png" alt=""></figure>
+                        <div class="zoom-img overflow-h b-radius-15">
+                            <figure><img src="assets/img/imgss.png" alt="" class="img-xxl"></figure>
                         </div>
-                        <div class="zoom-img overflow-h">
-                            <figure> <img src="assets/img/imgscroll.png" alt=""></figure>
+                        <div class="zoom-img overflow-h b-radius-15">
+                            <figure> <img src="assets/img/imgscroll.png" alt="" class="img-xxl"></figure>
                         </div>
-                        <div class="zoom-img overflow-h">
+                        <div class="zoom-img overflow-h b-radius-15">
                             <figure>
-                                <img src="assets/img/scimg.png" alt="">
+                                <img src="assets/img/scimg.png" alt="" class="img-xxl">
                             </figure>
                         </div>
-                        <div class="zoom-img overflow-h">
-                            <figure> <img src="assets/img/scoll.png" alt=""></figure>
+                        <div class="zoom-img overflow-h b-radius-15">
+                            <figure> <img src="assets/img/scoll.png" alt="" class="img-xxl"></figure>
                         </div>
-                        <div class="zoom-img overflow-h">
-                            <figure> <img src="assets/img/scroollimg.png" alt=""></figure>
+                        <div class="zoom-img overflow-h b-radius-15">
+                            <figure> <img src="assets/img/scroollimg.png" alt="" class="img-xxl"></figure>
                         </div>
-                        <div class="zoom-img overflow-h">
-                            <figure><img src="assets/img/scroollimgg.png" alt=""></figure>
+                        <div class="zoom-img overflow-h b-radius-15">
+                            <figure><img src="assets/img/scroollimgg.png" alt="" class="img-xxl"></figure>
                         </div>
-                        <div class="zoom-img overflow-h">
-                            <figure><img src="assets/img/imgss.png" alt=""></figure>
+                        <div class="zoom-img overflow-h b-radius-15">
+                            <figure><img src="assets/img/imgss.png" alt="" class="img-xxl"></figure>
                         </div>
-                        <div class="zoom-img overflow-h">
-                            <figure> <img src="assets/img/imgscroll.png" alt=""></figure>
+                        <div class="zoom-img overflow-h b-radius-15">
+                            <figure> <img src="assets/img/imgscroll.png" alt="" class="img-xxl"></figure>
                         </div>
 
 
@@ -491,12 +491,13 @@
                 </div>
 
             </section>
-            <section class=" dFlex  g-4  site-info  m-4 align-center just-between row-tablet">
+            <section class=" dFlex  g-5  site-info  m-4 align-center just-between row-tablet">
+            
                 <div>
-                    <figure><img src="./assets/img/footer-logo.png" alt="" class="footer-logo"></figure>
+                    <figure><img src="./assets/img/footer-logo.png" alt="" class="footer-logo img-xl "></figure>
                 </div>
                 <div class="row-direction">
-                    <div class="dGrid categories ">
+                    <div class="dGrid categories gap-3 ">
                         <div>
                             <h2 class="text-uppercase">Site Map</h2>
                             <ul>
@@ -554,7 +555,7 @@
             </section>
             <section class="footer-end dFlex just-between align-center m-2">
                 <div>
-                    <p>2024 All right reserved</p>
+                    <p class="font-size-20">2024 All right reserved</p>
                 </div>
 
                 <div class="social-media dFlex gap-1">
