--- a/FMACSS-Framework/index.html
+++ b/FMACSS-Framework/index.html
@@ -75,8 +75,8 @@
                 <figure class="mask-layer  remove-phone"><img src="assets/img/mask-layer.png" alt=""
                         class="img-xxl p-absolute">
                 </figure>
-                <div class="optionsMenu align-center just-center row p-0 p-absolute img-tablet-100 b-radius-15 just-phone-center">
-                    <form action="#" class=" just-phone-center">
+                <div class="optionsMenu align-center just-center row p-0 p-absolute img-tablet-100 b-radius-15 just-phone-center row-phone">
+                    <form action="#" class=" just-phone-center row-phone">
                         <select name="select" id="contry" class="p-0 m-0 cursor-p">
                             <option selected="select" disabled="disabled" class="option">Where to?</option>
                             <option value="2" class="option">Kyoto, Japan</option>
@@ -114,7 +114,7 @@
         </section>
         <div class="p-4 bgline all-page-p mobile-margin-top ">
             <section class="aboutUs dGrid align-center just-center ">
-                <article class="m-3  content just-phone-center align-phone-center txt-phone-al-center ">
+                <article class="m-3   content just-phone-center align-phone-center txt-phone-al-center row-phone">
                     <p class="p-content ">about us:</p>
                     <h1 class="text-uppercase img-lg font-size-30">When passion and adventure collide, they ignite the
                         flames of your
@@ -347,7 +347,7 @@
 
 
 
-                    <article class="city-content dFlex align-center just-between g-8 just-phone-center txt-phone-al-center">
+                    <article class="city-content dFlex align-center just-between g-8 just-phone-center txt-phone-al-center ">
                         <figure class="city-img p-0 b-radius-15"><img src="assets/img/grece.jpg" alt="Amsterdam" class="b-radius-15"></figure>
                         <div class="city-info">
                             <h1 class="text-uppercase">Greece</h1>
