--- a/assignments/Progress Bar/index.html
+++ b/assignments/Progress Bar/index.html
@@ -1,44 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Progress Bar</title>
 
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Progress bar</title>
   <style>
-   
-   .progress-bar {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      width: 30px;
-      height: 200px;
-      border: 1px solid #ccc;
-      border-radius: 10px;
-      overflow: hidden;
+    * {
+      box-sizing: border-box;
     }
 
-   .progress-bar-inner {
-      width: 100%;
+    body {
+      margin: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+    }
+
+    .progress-bar-container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
+    .indicator {
+      font-family: monospace;
+      font-size: 0.9rem;
+      color: gray;
+    }
+
+    .progress-bar-wrapper {
+      position: relative;
+      width: 20px;
+      height: 200px;
+    }
+
+    .progress-bar {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 20px;
       height: 0;
-      background-color: #4CAF50; 
+      background-color: green;
       transition: height 0.3s;
     }
 
-   .progress-bar-inner.extra-range {
-      background-color: #FFC107; 
-    }
-
-   .progress-bar-inner.full {
-      background-color: #FF69B4; 
-    }
-
-
-   .progress-bar:hover::after {
+    .progress-bar:hover::before {
       content: attr(data-tooltip);
       position: absolute;
-      top: 0;
+      top: -20px;
       left: 50%;
       transform: translateX(-50%);
       background-color: #333;
@@ -49,39 +60,39 @@
     }
   </style>
 </head>
+
 <body>
-  <div class="progress-bar" >
-    <div class="progress-bar-inner" style="height: 0%;"></div>
+  <div class="progress-bar-container">
+    <span class="indicator">0%</span>
+    <div class="progress-bar-wrapper">
+      <div id="bar" class="progress-bar"></div>
+
+    </div>
+    <span class="indicator">100%</span>
+
   </div>
 
   <script>
-    const progressBar = document.querySelector('.progress-bar');
-    const progressBarInner = progressBar.querySelector('.progress-bar-inner');
+    let percentage = parseInt(prompt('What is the progress?'));
 
-    let progress = 0;
+    if (isNaN(percentage) || percentage < 0 || percentage > 100)
+      throw new Error('Write a valid percentage!');
 
-    function updateProgress() {
-      progress += 1;
-      progressBarInner.style.height = `${progress}%`;
+    let color;
+    if (percentage <= 20)
+      color = 'darkred';
+    else if (percentage <= 50)
+      color = 'orange';
+    else if (percentage <= 80)
+      color = 'blue';
+    else
+      color = 'green';
 
-      if (progress < 50) {
-        progressBarInner.classList.remove('extra-range', 'full');
-      } else if (progress < 80) {
-        progressBarInner.classList.add('extra-range');
-        progressBarInner.classList.remove('full');
-      } else {
-        progressBarInner.classList.add('full');
-        progressBarInner.classList.remove('extra-range');
-      }
-
-      progressBar.dataset.tooltip = `${progress}%`;
-
-      if (progress < 100) {
-        setTimeout(updateProgress, 100);
-      }
-    }
-
-    updateProgress();
+    let progressBar = document.getElementById('bar');
+    progressBar.style.backgroundColor = color;
+    progressBar.style.height = `${percentage}%`;
+    progressBar.dataset.tooltip = `${percentage}%`;
   </script>
 </body>
+
 </html>
